--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,15 +1,22 @@
 <h1>My Tasks</h1>
-
+<ul id="tasks">
   <% @tasks.each do |task| %>
-  <p>
+  <li>
   <% if task.completed %>
   <i class="far fa-check-square"></i>
   <% else %>
   <i class="far fa-square"></i>
   <% end %>
-    <%= link_to task.title, task_path(task) %>
+    <%= link_to task.title, task_path(task.id) %>
+    <%= link_to task_path(task.id), method: :delete, data: { confirm: "Delete #{task.title}?" } do %>
+     <i class="fa fa-trash-o" aria-hidden="true"></i>
   <% end %>
-</p>
-<%= link_to 'Add a new task', new_task_path %>
+</li>
+<% end %>
+</ul>
 
+<hr>
 
+<%= link_to tasks_new_path do %>
+  <i class="fa fa-plus"></i> Add a new task
+<% end %>
